# spin

./: Cargo.toml
crates/deploy/: Cargo.toml
crates/deploy/src/: auth.rs  config.rs  deploy.rs  lib.rs
crates/deploy/src/clients/: cloud.rs  mod.rs
crates/loader/: Cargo.toml
crates/loader/src/oci/: cache.rs
crates/oci/src/: loader.rs
crates/publish/: Cargo.toml
crates/publish/src/: lib.rs
crates/publish/src/bindle/: bindle_pusher.rs  bindle_writer.rs  expander.rs  mod.rs
crates/publish/src/oci/: client.rs  mod.rs
crates/trigger/: Cargo.toml
crates/trigger-http/src/: lib.rs
crates/trigger/src/: cli.rs  loader.rs  runtime_config.rs
crates/trigger/src/runtime_config/: key_value.rs  sqlite.rs
examples/http-rust/: abc.json  spin.toml
examples/http-rust/src/: lib.rs
src/: commands.rs  opts.rs
src/commands/: cloud_deploy.rs  cloud_login.rs  deploy.rs  login.rs  oci.rs  up.rs
