[package]
name = "spin-publish"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = "1.0"
bindle = { workspace = true }
docker_credential = "1.0"
dirs = "4.0"
dunce = "1.0"
futures = "0.3.14"
itertools = "0.10.3"
lazy_static = "1.4.0"
mime_guess = { version = "2.0" }
oci-distribution = { git = "https://github.com/radu-matei/oci-distribution", branch = "update-dockerhub-default-registry" }
regex = "1.5.4"
reqwest = "0.11"
semver = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
spin-loader = { path = "../loader" }
spin-manifest = { path = "../manifest" }
thiserror = "1.0.37"
tokio = { version = "1.20", features = ["full"] }
tracing = "0.1"
toml = "0.5"
